# sel4_rust_tools

./: CMakeLists.txt  Cargo.toml  README.md
gen_invocations/: Cargo.toml
gen_invocations/src/: lang_c.rs  lang_rust.rs  main.rs
gen_syscalls/: Cargo.toml
gen_syscalls/src/: lang_c.rs  main.rs
sel4_xml_types/: Cargo.toml
sel4_xml_types/src/: invocation_helper.rs  invocations.rs  lib.rs  syscalls.rs  test_support.rs
